deploy/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: samplevault
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$1
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600s"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600s"
    nginx.ingress.kubernetes.io/send-timeout: "600s"
spec:
  rules:
    - host: backend-service
      http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: samplevault
                port:
                  number: 8000
